# app

./: .dockerignore  .env  .env.example  .gitignore  ANALYTICS_BACKEND_REQUIREMENTS.md  CLAUDE.md  CLAUDE_GUIDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPRECATIONS.md  DOCUMENTATION.md  DROPDOWN_CONSISTENCY.md  Dockerfile  INTEGRATION_SUCCESS.md  LICENSE  README.md  SECURITY.md  TAURI_INTEGRATION.md  TESTING_REFERENCE.md  USER_GUIDE.md  index.html  lighthouserc.json  nginx.conf  package-lock.json  package.json  pocketbase-api-rules.md  pocketbase-schema.md  pocketbase_rules.json  pwa-assets.config.js  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts  vitest.config.ts
.github/: FUNDING.yml  SUPPORT.md  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml  security.yml
.github/workflows/: auto-update.yml  ci.yml  labeler.yml  release.yml  security.yml  stale.yml  tauri-build.yml
docs/: ANDROID_SETUP.md  CI_ANDROID_SETUP.md  SITE_SWITCHING_MIGRATION.md
external_services/cloudflare/: wrangler-impersonation.toml
external_services/pocketbase/: HOOKS_README.md  README.md  RECONCILIATION_SETUP.md  audit-logs.pb.js  create_user.pb.js  impersonation-hooks.pb.js  (+19 more)
public/: _headers  browserconfig.xml  manifest.json  sw.js
scripts/: check-android-setup.sh  convert-legal-docs.js  dev-setup.sh
src/: App.vue  main.ts  style.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
(+367 files in other folders)
