[package]
name = "sitewise"
version = "0.1.1"
description = "SiteWise - Construction Site Management"
authors = ["SiteWise Team"]
license = ""
repository = ""
default-run = "sitewise"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-notification = "2.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
